--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="icon" href="icons/favicon.ico">
 
-    <title>awesome reviews</title>
+    <title>Supercar Sales</title>
 
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
