--- a/mainpage.html
+++ b/mainpage.html
@@ -142,7 +142,7 @@
         </div>
         <div class="col-lg-4 col-md-6 item">
           <div class="well">
-            <img src="images/food5.jpg" width="100%" />
+            <img src="http://cdn.lamborghini.com/content/homepage/Lamborghini-Centenario-3-4-Front-HP-models_1920x1080.jpg" width="100%" />
             <h4><div data-lorem="1-2w" class="pull-left margin-right-10"></div>Cafe </h4>
             <p class="text-muted"><div data-lorem="15-22w"></div></p>
             <p>
