--- a/mainpage.html
+++ b/mainpage.html
@@ -99,7 +99,7 @@
         </div>
         <div class="col-lg-4 col-md-6 item">
           <div class="well">
-            <img src="images/food2.jpg" width="100%" />
+            <img src="http://images.hgmsites.net/med/lamborghini-centenario_100547416_m.jpg" width="100%" />
             <h4><div data-lorem="1-2w" class="pull-left margin-right-10"></div>Cafe </h4>
             <p class="text-muted"><div data-lorem="15-22w"></div></p>
             <p>
