--- a/mainpage.html
+++ b/mainpage.html
@@ -113,7 +113,7 @@
         </div>
         <div class="col-lg-4 col-md-6 item">
           <div class="well">
-            <img src="images/food3.jpg" width="100%" />
+            <img src="https://i.kinja-img.com/gawker-media/image/upload/syrkpa1dygueq6o1b5pw.jpg" width="100%" />
             <h4><div data-lorem="1-2w" class="pull-left margin-right-10"></div>Cafe </h4>
             <p class="text-muted"><div data-lorem="15-22w"></div></p>
             <p>
@@ -128,7 +128,7 @@
 
         <div class="col-lg-4 col-md-6 item">
           <div class="well">
-            <img src="images/food4.jpg" width="100%" max-height="300" />
+            <img src="http://global.fncstatic.com/static/managed/img/Leisure/2009/lambo-cent-rear-876.jpg" width="100%" max-height="300" />
             <h4><div data-lorem="1-2w" class="pull-left margin-right-10"></div>Cafe </h4>
             <p class="text-muted"><div data-lorem="15-22w"></div></p>
             <p>
