--- a/mainpage.html
+++ b/mainpage.html
@@ -156,7 +156,7 @@
         </div>
         <div class="col-lg-4 col-md-6 item">
           <div class="well">
-            <img src="images/food6.jpg" width="100%" />
+            <img src="http://images.car.bauercdn.com/pagefiles/26800/1752x1168/centenario_07_high.jpg?mode=max&quality=90&scale=down" width="100%" />
             <h4><div data-lorem="1-2w" class="pull-left margin-right-10"></div>Cafe </h4>
             <p class="text-muted"><div data-lorem="15-22w"></div></p>
             <p>
