--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="carouselimg first-slide" src="images/rest.jpg" alt="First slide">
+          <img class="carouselimg first-slide" src="http://cdn.lamborghini.com/content/homepage/Lamborghini-Centenario-3-4-Front-HP-models_1920x1080.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
+              <h1>lamborghini sales</h1>
               <p>This is slide 1.</p>
               <p><a class="btn btn-lg btn-primary" href="signin.html" role="button">Sign up today</a></p>
             </div>
